JIRA-0003 feat(some): add new charts

--- a/public/index.html
+++ b/public/index.html
@@ -14,23 +14,23 @@
     <script type="text/javascript">
       var report = [];
     </script>
-    <script src='/dump.git'></script>
-    <script src='./dump.git'></script>
-    <script src='../dump.git'></script>
-    <script src='./dump-0.git'></script>
-    <script src='./dump-1.git'></script>
-    <script src='./dump-2.git'></script>
-    <script src='./dump-3.git'></script>
-    <script src='./dump-4.git'></script>
-    <script src='./dump-5.git'></script>
-    <script src='./dump-6.git'></script>
-    <script src='./report/dump-0.git'></script>
-    <script src='./report/dump-1.git'></script>
-    <script src='./report/dump-2.git'></script>
-    <script src='./report/dump-3.git'></script>
-    <script src='./report/dump-4.git'></script>
-    <script src='./report/dump-5.git'></script>
-    <script src='./report/dump-6.git'></script>
+    <script src='/log.txt'></script>
+    <script src='./log.txt'></script>
+    <script src='../log.txt'></script>
+    <script src='./log-0.txt'></script>
+    <script src='./log-1.txt'></script>
+    <script src='./log-2.txt'></script>
+    <script src='./log-3.txt'></script>
+    <script src='./log-4.txt'></script>
+    <script src='./log-5.txt'></script>
+    <script src='./log-6.txt'></script>
+    <script src='./report/log-0.txt'></script>
+    <script src='./report/log-1.txt'></script>
+    <script src='./report/log-2.txt'></script>
+    <script src='./report/log-3.txt'></script>
+    <script src='./report/log-4.txt'></script>
+    <script src='./report/log-5.txt'></script>
+    <script src='./report/log-6.txt'></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
