JIRA-1111 feat(ci-cd): some text

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <!-- Yandex.Metrika counter -->
+    <!-- Yandex.Metrika counter
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
@@ -80,6 +80,6 @@
       });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/94903985" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
+    /Yandex.Metrika counter -->
   </body>
 </html>
