Change website language to English
The code updates the project language from Russian to English in the index.html file. Furthermore, it also revises the metadata, including the title, description, keywords, and tooltips, organizing the project to cater to an international audience.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -35,29 +35,29 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Git статистика</title>
-    <meta name="description" content="Простой и быстрый отчёт по истории коммитов в git.">
-    <meta name="keywords" content="git, статистика, аудит, история, log, мониторинг, контроль сотрудников">
+    <title>Git Statistics</title>
+    <meta name="description" content="Simple and fast report on git commit history.">
+    <meta name="keywords" content="git, statistics, audit, history, log, monitoring, employee control">
     <meta name="author" content="Bakhirev Aleksei">
     <meta name="copyright" content="(c) Bakhirev Aleksei">
     <meta http-equiv="Reply-to" content="alexey-bakhirev@yandex.ru">
 
-    <meta name="application-name" content="GIT Статистика">
-    <meta name="msapplication-tooltip" content="Простой и быстрый отчёт по истории коммитов в git.">
-    <meta property="og:title" content="GIT Статистика">
-    <meta property="og:description" content="Простой и быстрый отчёт по истории коммитов в git.">
+    <meta name="application-name" content="Git Statistics">
+    <meta name="msapplication-tooltip" content="Simple and fast report on Git commit history.">
+    <meta property="og:title" content="Git Statistics">
+    <meta property="og:description" content="Simple and fast report on Git commit history.">
     <meta property="og:image" content="http://assayo.jp/assets/seo/custom_icon_256.png">
     <meta property="og:site_name" content="Assayo">
     <meta property="og:url" content="http://assayo.jp/">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="GIT Статистика">
-    <meta name="twitter:description" content="Простой и быстрый отчёт по истории коммитов в git.">
+    <meta name="twitter:title" content="Git Statistics">
+    <meta name="twitter:description" content="Simple and fast report on Git commit history.">
     <meta name="twitter:creator" content="Bakhirev Aleksei">
     <meta name="twitter:image:src" content="http://assayo.jp/assets/seo/custom_icon_256.png">
     <meta name="twitter:domain" content="assayo.jp">
     <meta name="twitter:site" content="assayo.jp">
-    <meta itemprop="name" content="GIT Статистика">
-    <meta itemprop="description" content="Простой и быстрый отчёт по истории коммитов в git.">
+    <meta itemprop="name" content="Git Statistics">
+    <meta itemprop="description" content="Simple and fast report on Git commit history.">
     <meta itemprop="image" content="http://assayo.jp/assets/seo/custom_icon_256.png">
   </head>
   <body>
