MMM-2022 lol(kek): 4eburek

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <meta name="copyright" content="(c) Bakhirev Aleksei">
     <meta http-equiv="Reply-to" content="alexey-bakhirev@yandex.ru">
 
-    <meta name="application-name" content="Git Statistics">
+    <meta name="application-name" content="Git statistics">
     <meta name="msapplication-tooltip" content="Simple and fast report on Git commit history.">
     <meta property="og:title" content="Git Statistics">
     <meta property="og:description" content="Simple and fast report on Git commit history.">
