--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="theme-color" content="white"/>
 
     <script type="text/javascript">
       var report = [];
@@ -80,6 +81,6 @@
       });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/94903985" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    /Yandex.Metrika counter -->
+     /Yandex.Metrika counter -->
   </body>
 </html>
