--- a/public/index.html
+++ b/public/index.html
@@ -47,19 +47,19 @@
     <meta name="msapplication-tooltip" content="Simple and fast report on Git commit history.">
     <meta property="og:title" content="Git Statistics">
     <meta property="og:description" content="Simple and fast report on Git commit history.">
-    <meta property="og:image" content="http://assayo.jp/assets/seo/custom_icon_256.png">
+    <meta property="og:image" content="http://assayo.online/assets/seo/custom_icon_256.png">
     <meta property="og:site_name" content="Assayo">
-    <meta property="og:url" content="http://assayo.jp/">
+    <meta property="og:url" content="http://assayo.online/">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Git Statistics">
     <meta name="twitter:description" content="Simple and fast report on Git commit history.">
     <meta name="twitter:creator" content="Bakhirev Aleksei">
-    <meta name="twitter:image:src" content="http://assayo.jp/assets/seo/custom_icon_256.png">
-    <meta name="twitter:domain" content="assayo.jp">
-    <meta name="twitter:site" content="assayo.jp">
+    <meta name="twitter:image:src" content="http://assayo.online/assets/seo/custom_icon_256.png">
+    <meta name="twitter:domain" content="assayo.online">
+    <meta name="twitter:site" content="assayo.online">
     <meta itemprop="name" content="Git Statistics">
     <meta itemprop="description" content="Simple and fast report on Git commit history.">
-    <meta itemprop="image" content="http://assayo.jp/assets/seo/custom_icon_256.png">
+    <meta itemprop="image" content="http://assayo.online/assets/seo/custom_icon_256.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
