--- a/public/local.html
+++ b/public/local.html
@@ -15,26 +15,9 @@
     <script type="text/javascript">
       var report = [];
     </script>
-    <script src='/log.txt'></script>
-    <script src='./log.txt'></script>
-    <script src='../log.txt'></script>
-    <script src='./log-0.txt'></script>
-    <script src='./log-1.txt'></script>
-    <script src='./log-2.txt'></script>
-    <script src='./log-3.txt'></script>
-    <script src='./log-4.txt'></script>
-    <script src='./log-5.txt'></script>
-    <script src='./log-6.txt'></script>
-    <script src='./report/log-0.txt'></script>
-    <script src='./report/log-1.txt'></script>
-    <script src='./report/log-2.txt'></script>
-    <script src='./report/log-3.txt'></script>
-    <script src='./report/log-4.txt'></script>
-    <script src='./report/log-5.txt'></script>
-    <script src='./report/log-6.txt'></script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="./favicon.svg" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="manifest" href="./asset-manifest.json" />
 
     <title>Git Statistics</title>
     <meta name="description" content="Simple and fast report on git commit history.">
@@ -60,27 +43,12 @@
     <meta itemprop="name" content="Git Statistics">
     <meta itemprop="description" content="Simple and fast report on Git commit history.">
     <meta itemprop="image" content="https://assayo.online/assets/seo/custom_icon_256.png">
+
+    <link rel="stylesheet" type="text/css" href="./static/index.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!-- Yandex.Metrika counter
-    <script type="text/javascript" >
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();
-        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-      ym(94903985, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-      });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/94903985" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-     /Yandex.Metrika counter -->
+    <script src='./static/index.js'></script>
   </body>
 </html>
