--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="white"/>
 
+    <meta name="defaultLanguage" content="ru">
+    <meta name="availableLanguages" content="en, es, fr, ja, pt, de, zh, ru">
+    <link rel="canonical" href="https://assayo.online/demo/">
+
     <script type="text/javascript">
       var report = [];
     </script>
@@ -28,11 +32,13 @@
 
     <meta name="application-name" content="Git statistics">
     <meta name="msapplication-tooltip" content="Simple and fast report on Git commit history.">
+
     <meta property="og:title" content="Git Statistics">
     <meta property="og:description" content="Simple and fast report on Git commit history.">
     <meta property="og:image" content="https://assayo.online/assets/seo/custom_icon_256.png">
     <meta property="og:site_name" content="Assayo">
     <meta property="og:url" content="https://assayo.online/">
+
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Git Statistics">
     <meta name="twitter:description" content="Simple and fast report on Git commit history.">
@@ -40,6 +46,7 @@
     <meta name="twitter:image:src" content="https://assayo.online/assets/seo/custom_icon_256.png">
     <meta name="twitter:domain" content="assayo.online">
     <meta name="twitter:site" content="assayo.online">
+
     <meta itemprop="name" content="Git Statistics">
     <meta itemprop="description" content="Simple and fast report on Git commit history.">
     <meta itemprop="image" content="https://assayo.online/assets/seo/custom_icon_256.png">
