--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
     <link rel="canonical" href="https://assayo.online/demo/">
 
     <script type="text/javascript">
-      var report = [];
+      var r = [];
+      var report = r;
+      var f = String.raw.bind(String);
     </script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
