--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
     <link rel="canonical" href="https://assayo.online/demo/">
 
     <script type="text/javascript">
-      var r = [];
-      var report = r;
+      var report = [];
+      function r(t) {
+        report.push(t);
+      }
       var f = String.raw.bind(String);
     </script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
