--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <meta name="defaultLanguage" content="ru">
     <meta name="availableLanguages" content="en, es, fr, ja, pt, de, zh, ru">
-    <link rel="canonical" href="https://assayo.online/demo/">
+    <link rel="canonical" href="https://bakhirev.github.io/demo/">
 
     <script type="text/javascript">
       var report = [];
@@ -41,21 +41,21 @@
 
     <meta property="og:title" content="Git Statistics">
     <meta property="og:description" content="Simple and fast report on Git commit history.">
-    <meta property="og:image" content="https://assayo.online/assets/seo/custom_icon_256.png">
+    <meta property="og:image" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
     <meta property="og:site_name" content="Assayo">
-    <meta property="og:url" content="https://assayo.online/">
+    <meta property="og:url" content="https://bakhirev.github.io/">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Git Statistics">
     <meta name="twitter:description" content="Simple and fast report on Git commit history.">
     <meta name="twitter:creator" content="Bakhirev Aleksei">
-    <meta name="twitter:image:src" content="https://assayo.online/assets/seo/custom_icon_256.png">
-    <meta name="twitter:domain" content="assayo.online">
-    <meta name="twitter:site" content="assayo.online">
+    <meta name="twitter:image:src" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
+    <meta name="twitter:domain" content="bakhirev.github.io">
+    <meta name="twitter:site" content="bakhirev.github.io">
 
     <meta itemprop="name" content="Git Statistics">
     <meta itemprop="description" content="Simple and fast report on Git commit history.">
-    <meta itemprop="image" content="https://assayo.online/assets/seo/custom_icon_256.png">
+    <meta itemprop="image" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
