--- a/public/themes/index.html
+++ b/public/themes/index.html
@@ -87,6 +87,11 @@
         href="./demo.html?sidebarImage=./cs/sidebar.png&sidebarColor=001529&width=200&height=0&title=CodeScoring">
       CodeScoring
     </a>
+    <a
+        target="_blank"
+        href="./demo.html?headerImage=./grafana/header.png&headerColor=000&height=46&width=0&title=Grafana&mode=dark">
+      Dark mode
+    </a>
   </nav>
 </main>
 </body>
