--- a/public/themes/demo.html
+++ b/public/themes/demo.html
@@ -138,7 +138,7 @@
     }
 
     const mode = parameters.mode || 'white';
-    const url = `http://localhost:3006/?dump=./test.txt&theme=./themes/${mode}.css`;
+    const url = `https://bakhirev.github.io/demo/?dump=./test.txt&theme=./themes/${mode}.css`;
     getElementById('frame').setAttribute('src', url);
   }
 
