--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
         report = report.concat(t.split("\n"));
       }
     </script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/logo/small.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo/big.svg" />
 
     <title>Git Statistics</title>
     <meta name="description" content="Simple and fast report on git commit history.">
@@ -41,7 +41,7 @@
 
     <meta property="og:title" content="Git Statistics">
     <meta property="og:description" content="Simple and fast report on Git commit history.">
-    <meta property="og:image" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
+    <meta property="og:image" content="https://bakhirev.github.io/assets/icons/big.svg">
     <meta property="og:site_name" content="Assayo">
     <meta property="og:url" content="https://bakhirev.github.io/">
 
@@ -49,13 +49,13 @@
     <meta name="twitter:title" content="Git Statistics">
     <meta name="twitter:description" content="Simple and fast report on Git commit history.">
     <meta name="twitter:creator" content="Bakhirev Aleksei">
-    <meta name="twitter:image:src" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
+    <meta name="twitter:image:src" content="https://bakhirev.github.io/assets/icons/big.svg">
     <meta name="twitter:domain" content="bakhirev.github.io">
     <meta name="twitter:site" content="bakhirev.github.io">
 
     <meta itemprop="name" content="Git Statistics">
     <meta itemprop="description" content="Simple and fast report on Git commit history.">
-    <meta itemprop="image" content="https://bakhirev.github.io/assets/seo/custom_icon_256.png">
+    <meta itemprop="image" content="https://bakhirev.github.io/assets/icons/big.svg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
